...
            "state" : "translated",
            "value" : "Entrada de áudio"
          }
        }
      }
    },
    "Back" : {
      "comment" : "A button that goes back in time.",
      "isCommentAutoGenerated" : true
    },
    "Background" : {
      "localizations" : {
        "ca" : {
...
      }
    },
    "Calendar access needed" : {
      "comment" : "A title for an alert that appears when the user tries to add a note to their calendar but hasn't given access.",
      "isCommentAutoGenerated" : true
    },
    "Cancel" : {
      "localizations" : {
        "ca" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel·la"
          }
...
            "state" : "translated",
            "value" : "Limpar a pesquisa"
          }
        }
      }
    },
    "Close" : {
      "localizations" : {
        "ca" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tanca"
          }
...
            "state" : "translated",
            "value" : "Descreve o teu comentário…"
          }
        }
      }
    },
    "Dictate" : {
      "localizations" : {
        "ca" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dicta"
          }
...
            "state" : "translated",
            "value" : "Editar"
          }
        }
      }
    },
    "Edit note" : {
      "comment" : "A button that opens a view for editing a note.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ca" : {
          "stringUnit" : {
            "state" : "translated",
...
      }
    },
    "Forward" : {
      "comment" : "A button that moves to the next note in the list.",
      "isCommentAutoGenerated" : true
    },
    "Generate" : {
      "localizations" : {
        "ca" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Suggereix"
          }
...
            "state" : "translated",
            "value" : "Dá um nome aos teus sapatos em voz alta 👟"
          }
        }
      }
    },
    "New note" : {
      "localizations" : {
        "ca" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nota nova"
          }
...
            "state" : "translated",
            "value" : "Guardar"
          }
        }
      }
    },
    "Save note" : {
      "localizations" : {
        "ca" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Desa la nota"
          }
...
        }
      }
    },
    "Set Priority" : {

    },
    "Settings" : {
      "localizations" : {
        "ca" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Configuració"
          }
...
